CTrackUAT/src/objects/Material_Master__c.object
<CustomObject>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Factor__c</fullName>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <controllingField>Franchise__c</controllingField>
            <picklistValues>
                <fullName>ACCLARENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER PROF PROD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISINFECTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STERRAD EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOSURGERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOSENSE WEBSTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDOVASCULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER CARDIOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY CODMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY MITEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY ORTHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY SPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY TRAUMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREAST CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDO MECHANICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHICON PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOMENS HEALTH &amp; UROLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFESCAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POWER TOOLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAUMA AND OTHERS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <picklistValues>
                <fullName>ACCLARENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOSURGERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHICON SURGICAL CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFESCAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYNTHES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group__c</fullName>
        <label>Material Price Group</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Heirarchy__c</fullName>
        <label>Product Heirarchy</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>ACCLARENT PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL OTHER PROF PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTISEPTICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOCIDES - DETERGENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOCIDES - DISINFECTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOPATCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAND HYGIENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKIN PREPARATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STERRAD CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STERRAD EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNICAL SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOSURGERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENERAL WOUND CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEMOSTASIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVIGATION CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-NAVIGATION CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULTRASOUND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIAG. CATHETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUIDEWIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUIDING CATHETERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVC FILTERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICRO CATHETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTA BALLOONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-ENTRY CATHETER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHEATHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STEERABLE GUIDEWIRES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Material Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_Description__c</columns>
        <columns>Material_Price_Group__c</columns>
        <columns>Product_Heirarchy__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Franchise__c</columns>
        <columns>Division__c</columns>
        <columns>Brands__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Material Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>